--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-07T23:04:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eUfgigVTd4D0
-								ZQx89Mr+8w==
+								Qtj3L2Gfc+47
+								bDP/+x/q7A==
 								</data>
 								<key>Size</key>
-								<integer>135389</integer>
+								<integer>136020</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
