--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-07T22:45:57Z</date>
+						<date>2019-05-07T23:04:13Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -139,26 +139,6 @@
 								</data>
 								<key>Size</key>
 								<integer>36359</integer>
-							</dict>
-							<key>files/stacks-image-3f840b6-400x400.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								YTLD/bUe0ORf
-								RgdNKhsiZw==
-								</data>
-								<key>Size</key>
-								<integer>38260</integer>
-							</dict>
-							<key>files/stacks-image-3f840b6-400x400@2x.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ikxpBxIX6ud5
-								VZ+scCDjnQ==
-								</data>
-								<key>Size</key>
-								<integer>91182</integer>
 							</dict>
 							<key>files/stacks-image-4d3140c.png</key>
 							<dict>
@@ -279,16 +259,6 @@
 								</data>
 								<key>Size</key>
 								<integer>2522</integer>
-							</dict>
-							<key>files/stacks-image-8395111-400x160.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ms3meQXAaQnm
-								N/rdpFM+Kw==
-								</data>
-								<key>Size</key>
-								<integer>20511</integer>
 							</dict>
 							<key>files/stacks-image-8e88332-100x104.png</key>
 							<dict>
@@ -430,16 +400,6 @@
 								<key>Size</key>
 								<integer>59895</integer>
 							</dict>
-							<key>files/stacks-image-f9e98ca.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								t6NqD4BKfum7
-								w6sBxo56PA==
-								</data>
-								<key>Size</key>
-								<integer>15236</integer>
-							</dict>
 							<key>files/stacks-image-fd0e8b0-248x56.png</key>
 							<dict>
 								<key>Digest</key>
@@ -454,11 +414,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								I38+Yjeoqlwb
-								OlgTtrP0AA==
+								ymI6zasR2u1A
+								uSO24NDWBA==
 								</data>
 								<key>Size</key>
-								<integer>157110</integer>
+								<integer>151196</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -474,11 +434,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cXW50RrGmB+O
-								R0LeE++m3A==
+								gCceLsgihAnt
+								ewtiDjWCIQ==
 								</data>
 								<key>Size</key>
-								<integer>86369</integer>
+								<integer>82197</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
