--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-07T23:04:13Z</date>
+						<date>2019-05-08T16:52:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -574,8 +574,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j85bUAub8++Z
-								cxxZ9wWE7g==
+								9aYTMFYR1KBF
+								/wC63cxqKA==
 								</data>
 								<key>Size</key>
 								<integer>559500</integer>
@@ -584,8 +584,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qkQae2c+Am7M
-								14jWwDgo3w==
+								nudW4tFHolxX
+								6YhlKJYD3w==
 								</data>
 								<key>Size</key>
 								<integer>76985</integer>
@@ -594,8 +594,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JAflTqpv3txI
-								KAehOhTOdQ==
+								9QTNz1G8/aJd
+								CJvyv/cuxQ==
 								</data>
 								<key>Size</key>
 								<integer>941357</integer>
