--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -12158,7 +12158,7 @@
 					<key>page71 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-02T20:30:55Z</date>
+						<date>2019-05-09T15:34:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -12342,6 +12342,16 @@
 								</data>
 								<key>Size</key>
 								<integer>224295</integer>
+							</dict>
+							<key>files/stacks-image-6fdef3a-398x292.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								H6KpkblKsWji
+								NCljG2gZXA==
+								</data>
+								<key>Size</key>
+								<integer>34040</integer>
 							</dict>
 							<key>files/stacks-image-77e58ea-250x374.jpg</key>
 							<dict>
@@ -12537,11 +12547,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YVsjvPt4AjXn
-								LP4rH7G0UQ==
+								pIeX4FQNCvmn
+								UVwEbytajg==
 								</data>
 								<key>Size</key>
-								<integer>112606</integer>
+								<integer>112894</integer>
 							</dict>
 							<key>files/stacks_page_page71.js</key>
 							<dict>
@@ -12557,11 +12567,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GVIAmQna8kfM
-								6BhmocHAYw==
+								kwtegZJOg3p/
+								axqtWJkiUw==
 								</data>
 								<key>Size</key>
-								<integer>68966</integer>
+								<integer>69656</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14700,7 +14710,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T14:23:09Z</date>
+						<date>2019-05-09T15:34:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14729,11 +14739,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								F6cR3Cq9mWcS
-								8pQlqANd5Q==
+								7lLZ6PfKx8OF
+								ocEx83puGw==
 								</data>
 								<key>Size</key>
-								<integer>5569</integer>
+								<integer>5537</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14812,7 +14822,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T14:23:09Z</date>
+						<date>2019-05-09T15:34:28Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15851,11 +15861,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								a7Ym/MmhRS9o
-								qnEm9buARA==
+								nWGmWbAOR3eJ
+								IfBTWnWpFQ==
 								</data>
 								<key>Size</key>
-								<integer>4636</integer>
+								<integer>3785</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -15999,7 +16009,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFCOuQqJAuADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFCQAM0moCADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16009,14 +16019,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUI65Cok
-				eYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUJAAzSb
+				t4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQjrkKiSi
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBQkADNJw0
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16026,7 +16036,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQjrkKiS8gAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBQkADNJxvgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16036,7 +16046,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBQjrkKiTVgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBQkADNJyZgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
