netsci sched update
NETSCI SCHED UPDATE

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-09T14:50:45Z</date>
+						<date>2019-05-09T17:59:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,21 +94,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								TPGeujKpTzHL
-								QR5lGhvUSw==
+								5SEHlmzIRPnE
+								h1Zlyu2W+A==
 								</data>
 								<key>Size</key>
-								<integer>35739</integer>
+								<integer>35205</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								v9Af7SEGojgo
-								zGOufpUslA==
+								ZP2FJ/yve/bb
+								UMUDEFQ7OA==
 								</data>
 								<key>Size</key>
-								<integer>69192</integer>
+								<integer>68310</integer>
 							</dict>
 							<key>files/stacks-image-0c90353-700x375.jpg</key>
 							<dict>
@@ -294,11 +294,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								J0oCqNLQIZun
-								8nxN/0xT1A==
+								AQQpX6Vwp+W4
+								iqILFHYS5g==
 								</data>
 								<key>Size</key>
-								<integer>28375</integer>
+								<integer>27501</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -574,31 +574,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eVxGZ8vNRDzs
-								oRw8L+Hl+w==
+								SIdtykek4G2f
+								eeSzycG1TA==
 								</data>
 								<key>Size</key>
-								<integer>559010</integer>
+								<integer>559285</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								V1xuyZJdp3HP
-								ja9yt2cURQ==
+								62eeUFDjYYQl
+								w45os8bLiQ==
 								</data>
 								<key>Size</key>
-								<integer>76621</integer>
+								<integer>76803</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								flRbK8kfgyxb
-								cig11G3njw==
+								ZLhG5mo46IMm
+								4028bfsRJw==
 								</data>
 								<key>Size</key>
-								<integer>933889</integer>
+								<integer>935100</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
